# pdGameLD53

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  build.sh  build_arm.sh  build_station.py  configure.sh  configure_cross.sh  crosscompile.txt  fix_format.sh  meson.build  meson_options.txt
.github/workflows/: test.yml
Lib/: CMakeLists.txt  ST01.cpp  ST01_Central_Station.json  ST99_Test.json  asteroid.cpp  asteroid.hpp  asteroid_type.hpp  build_station.py  camera.hpp  consts.hpp  fonts.hpp  game.cpp  game.h  game_state.hpp  main.c  math_intersect.c  math_intersect.h  meson.build  mission_desc.hpp  pd_helpers.hpp  sounds.hpp  space_craft.cpp  space_craft.hpp  space_object.hpp  space_station.cpp  space_station.hpp  space_station_desc.hpp  space_stations_descs.cpp  space_stations_descs.hpp  stars.cpp  stars.hpp  static_random_generator.cpp  static_random_generator.hpp  stubs.c  ui_game_interface.cpp  ui_game_interface.hpp  ui_station.cpp  ui_station.hpp
Lib/PdSymphony/: aa_rect2d.hpp  aa_rect2d_test.cpp  all_symphony.hpp  angle.hpp  better_assert.hpp  circle.hpp  config.hpp  hash.hpp  meson.build  pd_animations.hpp  pd_animations_test.cpp  pd_system_helpers.h  pd_system_helpers.hpp  point2d.hpp  point2d_test.cpp  point3d.hpp  random_generator.hpp  ray_casting_projection.hpp  ray_casting_projection_test.cpp  segment2d.hpp  segment2d_test.cpp  spatial_bins.hpp  transformation_matrix3d.hpp  transformation_matrix3d_test.cpp  vector2d.hpp  vector2d_test.cpp  vector3d.hpp
Source/: main.lua  pdxinfo
Source/data/: a_pressed.psd
Source/data/fonts/: Nontendo-Bold-2x.fnt  Nontendo-Bold-Outlined.fnt  Nontendo-Bold.fnt
build_arm/: CMakeCache.txt
pdGameLD53.pdx/: main.pdz  pdxinfo
scripts/: create_pdx.py  link_map.ld  meson.build  pd_ctrl.py
